--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for NoVanillaMeals
 
+1.3.1 - Replaced the patch with c# to be more compatible with dlc content
+
+
 1.0.3.0 - Mod updated for 1.3 and passed autotests
 
 
