--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for NoVanillaMeals
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.3.1 - Replaced the patch with c# to be more compatible with dlc content
 
 
